Added new get cache time handler
