# api/api.go
@@ -2,6 +2,7 @@ package api
 
 import (
 	"context"
+	"net/http"
 
 	"github.com/gorilla/mux"
 )
@@ -21,5 +22,10 @@ func Setup(ctx context.Context, r *mux.Router, dataStore DataStore) *API {
 
 	r.HandleFunc("/mongocheck", api.AddDataSets(ctx)).Methods("POST")
 	r.HandleFunc("/mongocheck", api.GetDataSets(ctx)).Methods("GET")
+
+	// TODO: implement write endpoint here (DIS-328)
+	r.HandleFunc("/v1/cache-times/{id}", func(w http.ResponseWriter, req *http.Request) {
+		api.GetCacheTime(ctx, w, req)
+	}).Methods(http.MethodGet)
 	return api
 }
